--- a/css/main.scss
+++ b/css/main.scss
@@ -97,8 +97,10 @@ body {
   }
   &-title {
     color: $darkBlue;
-    font-size: 6em;
+    font-size: 5em;
+    text-transform: uppercase;
     font-weight: bold;
+    letter-spacing: 1.2;
   }
   &.post-title {
     font-size: 2em;
