--- a/css/main.scss
+++ b/css/main.scss
@@ -34,6 +34,7 @@ body {
   width: 100%;
   margin: 0px auto;
   display: flex;
+  z-index: 300;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
